PIM-2006 Fix multiselect z-index

--- a/src/Pim/Bundle/UIBundle/Resources/public/css/form.less
+++ b/src/Pim/Bundle/UIBundle/Resources/public/css/form.less
@@ -1155,6 +1155,9 @@ button.pimmultiselect {
 .ui-multiselect-optgroup-label a:hover {
   color: @textColor;
 }
+.ui-multiselect-menu {
+  z-index: 800;
+}
 
 .attribute-requirement {
   height: 20px;
